--- a/.github/workflows/run-sushi-and-push-to-simplifier.yml
+++ b/.github/workflows/run-sushi-and-push-to-simplifier.yml
@@ -13,6 +13,9 @@ jobs:
         with:
           dotnet-version: 8.0.x
 
+      - name: Install Firely Terminal
+        run: dotnet tool install --global firely.terminal
+
       - name: Set up Node.js for SUSHI
         uses: actions/setup-node@v4
         with:
