--- a/.github/workflows/run-sushi-and-push-to-simplifier-on-dispatch.yml
+++ b/.github/workflows/run-sushi-and-push-to-simplifier-on-dispatch.yml
@@ -5,3 +5,6 @@ jobs:
   run-sushi-and-push-to-simplifier:
     name: Run SUSHI and Push to Simplifier
     uses: ./.github/workflows/run-sushi-and-push-to-simplifier.yml
+    secrets:
+      SIMPLIFIER_EMAIL_ADDRESS: ${{ secrets.SIMPLIFIER_EMAIL_ADDRESS }}
+      SIMPLIFIER_PASSWORD: ${{ secrets.SIMPLIFIER_PASSWORD }}
