update the workflow to link a Simplifier project

--- a/.github/workflows/run-sushi-and-push-to-simplifier-on-dispatch.yml
+++ b/.github/workflows/run-sushi-and-push-to-simplifier-on-dispatch.yml
@@ -8,3 +8,4 @@ jobs:
     secrets:
       SIMPLIFIER_EMAIL_ADDRESS: ${{ secrets.SIMPLIFIER_EMAIL_ADDRESS }}
       SIMPLIFIER_PASSWORD: ${{ secrets.SIMPLIFIER_PASSWORD }}
+      SIMPLIFIER_PROJECT_KEY: ${{ secrets.SIMPLIFIER_PROJECT_KEY }}
