--- a/.github/workflows/run-sushi-and-push-to-simplifier.yml
+++ b/.github/workflows/run-sushi-and-push-to-simplifier.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Install SUSHI
         run: npm install -g fsh-sushi
 
+      - name: Generate resources with SUSHI
+        run: sushi . -o ./fsh-generated
+
       - name: Login to Simplifier
         run: fhir login email=${{ secrets.SIMPLIFIER_EMAIL_ADDRESS }} password=${{ secrets.SIMPLIFIER_PASSWORD }}
 
