attempt to fix the SUSHI workflow step

--- a/.github/workflows/run-sushi-and-push-to-simplifier.yml
+++ b/.github/workflows/run-sushi-and-push-to-simplifier.yml
@@ -32,6 +32,7 @@ jobs:
         run: npm install -g fsh-sushi
 
       - name: Generate resources with SUSHI
+        working-directory: ExampleIG
         run: sushi . -o ./fsh-generated
 
       - name: Login to Simplifier
