--- a/.github/workflows/run-sushi-and-push-to-simplifier.yml
+++ b/.github/workflows/run-sushi-and-push-to-simplifier.yml
@@ -39,4 +39,9 @@ jobs:
         run: fhir login email=${{ secrets.SIMPLIFIER_EMAIL_ADDRESS }} password=${{ secrets.SIMPLIFIER_PASSWORD }}
 
       - name: Link Simplifier Project
+        working-directory: ExampleIG/fsh-generated/resources
         run: fhir project link ${{ secrets.SIMPLIFIER_PROJECT_KEY }} --strategy TakeLocal
+
+      - name: Push to Simplifier
+        working-directory: ExampleIG/fsh-generated/resources
+        run: fhir project push
