--- a/.github/workflows/run-sushi-and-push-to-simplifier.yml
+++ b/.github/workflows/run-sushi-and-push-to-simplifier.yml
@@ -45,3 +45,9 @@ jobs:
       - name: Push to Simplifier
         working-directory: ExampleIG/fsh-generated/resources
         run: fhir project push
+
+      - name: Persist Artifacts
+        uses: actions/upload-artifact@v4.6.0
+        with:
+          name: fsh-generated
+          path: ExampleIG/fsh-generated
